--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "pipeline.js-builder",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "fluent interface builder for pipeline.js",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
     "test": "make test"
   },
@@ -12,7 +12,7 @@
   "dependencies": {
     "pipeline.js": "*",
     "mpromise":"*",
-    "validate.js":"*"
+    "js-schema":"*"
   },
   "devDependencies": {
     "mocha": "*",
