--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pipeline.js-builder",
-  "version": "0.0.7",
+  "version": "0.1.0",
   "description": "fluent interface builder for pipeline.js",
   "main": "lib/index.js",
   "scripts": {
@@ -10,7 +10,7 @@
     "pipeline.js"
   ],
   "dependencies": {
-    "pipeline.js": "*",
+    "pipeline.js": "0.4.*",
     "mpromise":"*",
     "js-schema":"*"
   },
